[package]
name = "ron"
version = "0.7.0"
edition = "2018"

authors = [
    "Dzmitry Malyshau <kvarkus@gmail.com>",
    "Thomas Schaller <torkleyy@gmail.com>",
    "Christopher Durham (CAD97) <cad97@cad97.com>",
]
license = "MIT OR Apache-2.0"
description = "Rusty Object Notation"
readme = "README.md"
repository = "https://github.com/ron-rs/ron"

exclude = [
    "bors.toml",
    ".github",
]

[dependencies]
base64 = "0.12.0"
indexmap = "1.3.2"
lexical = "5.2.0"
serde = { version = "1.0.106", features = ["derive"] }
